Change YSS by styleguide

--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -435,10 +435,10 @@
                 </p>
                 <h3 class="title-separation magenta-sep">
                     <span></span>
-                    <a href="http://yago.io/project/yss/">YSS</a>
+                    <a href="https://github.com/tonifisler/generator-styleguide">Styleguide Generator Yeoman</a>
                 </h3>
                 <p>
-                    Développé par Yann, ce logiciel permet de générer dynamiquement un styleguide dynamique. <a href="http://antistatique.net/blog/2014/01/08/styleguides-dynamiques-et-les-bonnes-methodes-de-communication-dun-projet-web/">Retrouvez plus d'informations à ce sujet sur notre blog</a>.
+                    Développé par Toni et Yann, ce logiciel permet de générer un styleguide dynamique. <a href="http://antistatique.net/blog/2014/01/08/styleguides-dynamiques-et-les-bonnes-methodes-de-communication-dun-projet-web/">Retrouvez plus d'informations à ce sujet sur notre blog</a>.
                 </p>
             </article>
         </div>
