--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -68,7 +68,7 @@ _gaq.push(['_trackPageview']);
 
     <footer>
         <section>
-            <p class="vcard"><strong>Antistatique</strong> <a href="{{ path('contact') }}" class="locality">Lausanne</a> <span class="tel">+41 21 623 63 03</span> <a href="mailto:hello@antistatique.net" class="email">hello@antistatique.net</a></p>
+            <p class="vcard"><strong>Antistatique</strong> <a href="{{ path('contact') }}" class="locality">Lausanne / Genève</a> <span class="tel">+41 21 623 63 03</span> <a href="mailto:hello@antistatique.net" class="email">hello@antistatique.net</a></p>
             {% include '_menu.html.twig' %}
         </section>
     </footer>
