contenu révisé ... un peu

--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -23,7 +23,7 @@
     <div id="intro">
         <div class="with-aside">
             <aside>
-                <h2>Antistatique est une entreprise de passionnés du web. Notre agence se situe à <a href="http://www.lausanne.ch" title="Le paysage est tout de même plus joli que le site web">Lausanne</a>, Suisse.</h2>
+                <h2>Antistatique est une entreprise de passionnés du web. Notre agence se situe à <a href="{{ path('contact') }}">Lausanne</a> et à <a href="{{ path('contact') }}">Genève</a>, Suisse.</h2>
             </aside>
             <article>
                 <h3>
