add Marion & Luc, remove Alexandre

--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -254,20 +254,33 @@
                 <h4>Charlotte Fahrni</h4>
                 <p>Office Manager</p>
                 <p class="social-links">
-                    <a class="mail" href="mailto:cedric@antistatique.net"><span class="icon">m</span>charlotte@antistatique.net</a>
+                    <a class="mail" href="mailto:charlotte@antistatique.net"><span class="icon">m</span>charlotte@antistatique.net</a>
                     <a class="linkedin" href="https://www.linkedin.com/pub/charlotte-fahrni/77/b52/20b"><span class="icon">L</span>LinkedIn</a>
                 </p>
             </div>
         </div>
         <div class="member">
-            <div class="photo"><img src="/assets/img/team/aae.png"></div>
+            <div class="photo"><img src="/assets/img/team/mte.jpg"></div>
             <div class="description">
-                <h4>Alexandre Apraxine</h4>
-                <p>Junior Frontend Designer</p>
+                <h4>Marion Tamé</h4>
+                <p>Visual designer</p>
                 <p class="social-links">
-                    <a class="twitter" href="https://twitter.com/apraxinealex"><span class="icon">T</span>@apraxinealex</a>
-                    <a class="mail" href="mailto:alexandre@antistatique.net"><span class="icon">m</span>alexandre@antistatique.net</a>
-                    <a class="github" href="https://github.com/Alexandre-Apraxine"><span class="icon">O</span>Alexandre-Apraxine</a>
+                    <a class="twitter" href="https://twitter.com/marion_tame"><span class="icon">T</span>@marion_tame</a>
+                    <a class="mail" href="mailto:marion@antistatique.net"><span class="icon">m</span>marion@antistatique.net</a>
+                    <a class="linkedin" href="https://ch.linkedin.com/in/designmultimedia/"><span class="icon">L</span>LinkedIn</a>
+                </p>
+            </div>
+        </div>
+        <div class="member">
+            <div class="photo"><img src="/assets/img/team/lde.jpg"></div>
+            <div class="description">
+                <h4>Luc Demierre</h4>
+                <p>Backend Developer</p>
+                <p class="social-links">
+                    <a class="twitter" href="https://twitter.com/dmrrlc"><span class="icon">T</span>@dmrrlc</a>
+                    <a class="mail" href="mailto:luc@antistatique.net"><span class="icon">m</span>luc@antistatique.net</a>
+                    <a class="linkedin" href="https://www.linkedin.com/profile/view?id=35099167"><span class="icon">L</span>LinkedIn</a>
+                    <a class="github" href="https://github.com/dmrrlc"><span class="icon">O</span>dmrrlc</a>
                 </p>
             </div>
         </div>
