add superbissime theme color for chrome bar!!

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -32,6 +32,7 @@
     <meta name="msapplication-wide310x150logo" content="{{ app.request.basepath }}/mstile-310x150.png" />
     <meta name="msapplication-square310x310logo" content="{{ app.request.basepath }}/mstile-310x310.png" />
 
+    <meta name="theme-color" content="#d40b6b" />
 
     <link href="{{ app.request.basepath }}/assets/css/antistatique.css?v=3e83083" rel="stylesheet" type="text/css" />
     <script src="//use.typekit.net/lfl3jyz.js"></script>
