--- a/templates/fr/team.html.twig
+++ b/templates/fr/team.html.twig
@@ -247,18 +247,6 @@
             </div>
         </div>
         <div class="member">
-            <div class="photo"><img src="/assets/img/team/mte.jpg"></div>
-            <div class="description">
-                <h4>Marion Tamé</h4>
-                <p>Visual designer</p>
-                <p class="social-links">
-                    <a class="twitter" href="https://twitter.com/marion_tame"><span class="icon">T</span>@marion_tame</a>
-                    <a class="mail" href="mailto:marion@antistatique.net"><span class="icon">m</span>marion@antistatique.net</a>
-                    <a class="linkedin" href="https://ch.linkedin.com/in/designmultimedia/"><span class="icon">L</span>LinkedIn</a>
-                </p>
-            </div>
-        </div>
-        <div class="member">
             <div class="photo"><img src="/assets/img/team/lde.jpg"></div>
             <div class="description">
                 <h4>Luc Demierre</h4>
@@ -268,6 +256,16 @@
                     <a class="mail" href="mailto:luc@antistatique.net"><span class="icon">m</span>luc@antistatique.net</a>
                     <a class="linkedin" href="https://www.linkedin.com/profile/view?id=35099167"><span class="icon">L</span>LinkedIn</a>
                     <a class="github" href="https://github.com/dmrrlc"><span class="icon">O</span>dmrrlc</a>
+                </p>
+            </div>
+        </div>
+        <div class="member">
+            <div class="photo"><img src="/assets/img/team/lry.png"></div>
+            <div class="description">
+                <h4>Ludovic Renevey</h4>
+                <p>Digital Project Manager</p>
+                <p class="social-links">
+                    <a class="mail" href="mailto:ludovic@antistatique.net"><span class="icon">m</span>ludovic@antistatique.net</a>
                 </p>
             </div>
         </div>
